--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -5,6 +5,6 @@
         android:centerColor = "@color/darkacent"
         android:endColor="#2E7D32"
         android:startColor="#81C784"
-        android:type="linear" />
+        android:type="sweep" />
     <!--android:centerColor="#4CAF50"-->
 </shape>
