--- a/app/src/main/res/layout/fragment_transaction_page.xml
+++ b/app/src/main/res/layout/fragment_transaction_page.xml
@@ -7,11 +7,6 @@
     tools:context="x7a.droid.advancedapp.TransactionPage"
     android:id="@+id/fragment_transaction_page">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/purple">
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -50,7 +45,9 @@
                     android:layout_height="2dp"
                     android:layout_marginTop="@dimen/activity_horizontal_margin"
                     android:background="@color/black"/>
-
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
                 <EditText
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -61,6 +58,7 @@
                     android:id="@+id/desc_add_expenses"
                     android:layout_gravity="center_horizontal"
                     android:longClickable="true" />
+                </android.support.design.widget.TextInputLayout>
 
                 <EditText
                     android:layout_width="wrap_content"
@@ -159,7 +157,6 @@
                 </LinearLayout>
             </android.support.v7.widget.CardView>
         </LinearLayout>
-    </ScrollView>
 
 </FrameLayout>
 
