--- a/app/src/main/res/layout/fragment_sync_page.xml
+++ b/app/src/main/res/layout/fragment_sync_page.xml
@@ -9,12 +9,11 @@
     <!-- TODO: Update blank fragment layout -->
 
 
-    <TextView
-        android:layout_width="match_parent"
+
+    <Button
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_blank_fragment"
-        android:layout_gravity="center"
-        android:textAllCaps="true"
-        android:textStyle="bold"
-        android:textAlignment="center"/>
+        android:text="@string/sync_now"
+        android:id="@+id/button"
+        android:layout_gravity="center" />
 </FrameLayout>
