--- a/app/src/main/res/layout/fragment_dashboard_page.xml
+++ b/app/src/main/res/layout/fragment_dashboard_page.xml
@@ -16,7 +16,7 @@
 
     <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="300dp"
+            android:layout_height="280dp"
             android:padding="@dimen/activity_horizontal_margin"
             android:layout_marginTop="@dimen/activity_horizontal_margin"
             android:layout_marginLeft="@dimen/cardview_compat_inset_shadow"
@@ -37,7 +37,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
-                    android:text="OVERVIEW EXPENSES"
+                    android:text="@string/overview_expenses"
                     android:textAlignment="center"
                     android:id="@+id/tv_expenses_title"
                     android:textStyle="bold"/>
@@ -54,8 +54,8 @@
                     android:background="@color/black"/>
 
                 <ListView
-                    android:layout_width="wrap_content"
-                    android:layout_height="200dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="210dp"
                     android:id="@+id/lv_expenses">
 
                 </ListView>
@@ -63,7 +63,6 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="2dp"
-                    android:layout_marginTop="@dimen/activity_vertical_margin"
                     android:layout_gravity="center"
                     android:background="@color/black"/>
 
@@ -78,7 +77,7 @@
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="300dp"
+            android:layout_height="280dp"
             android:padding="@dimen/activity_horizontal_margin"
             android:layout_marginLeft="@dimen/cardview_compat_inset_shadow"
             android:layout_marginRight="@dimen/cardview_compat_inset_shadow"
@@ -96,7 +95,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
-                    android:text="OVERVIEW INCOME"
+                    android:text="@string/overview_incomes"
                     android:textAlignment="center"
                     android:id="@+id/tv_income_title"
                     android:textStyle="bold"/>
@@ -107,14 +106,13 @@
                     android:layout_gravity="center"
                     android:background="@color/black"/>
                 <ListView
-                    android:layout_width="wrap_content"
-                    android:layout_height="200dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="210dp"
                     android:id="@+id/lv_incomes" />
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="2dp"
                     android:layout_gravity="center"
-                    android:layout_marginTop="@dimen/activity_vertical_margin"
                     android:background="@color/black"/>
                 <TextView
                     android:layout_width="match_parent"
@@ -135,7 +133,7 @@
         android:layout_marginTop="@dimen/cardview_compat_inset_shadow"
         android:layout_marginBottom="@dimen/activity_horizontal_margin"
         app:cardCornerRadius="10dp"
-        app:cardBackgroundColor="@color/cardview_dark_background">
+        app:cardBackgroundColor="@color/purple">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
