--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -4,18 +4,25 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/purple"
+    android:background="@color/white_pure"
     android:id="@+id/fragment_welcome"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="x7a.droid.advancedapp.WelcomePage">
 
-    <TextView
-        android:layout_width="match_parent"
+    <ImageView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/activity_horizontal_margin"
-        android:text="WELCOME"
-        android:textAlignment="center"
-        android:textStyle="bold"
-        android:layout_gravity="center" />
+        android:id="@+id/imageView"
+        android:layout_gravity="center"
+        android:background="@drawable/logo_supercell"/>
+
+    <!--<TextView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginTop="@dimen/activity_horizontal_margin"-->
+        <!--android:text="WELCOME"-->
+        <!--android:textAlignment="center"-->
+        <!--android:textStyle="bold"-->
+        <!--android:layout_gravity="center_horizontal|top" />-->
 
 </FrameLayout>
