--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="darkacent">#AFB42B</color>
     <color name="gray">#B1BCBE</color>
     <color name="purple">#DC00FF</color>
+    <color name="custom_yellow">#E9D460</color>
+    <color name="white_pure">#FFFFFF</color>
 </resources>
