--- a/app/src/main/res/layout/fragment_sync_page.xml
+++ b/app/src/main/res/layout/fragment_sync_page.xml
@@ -14,6 +14,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/sync_now"
-        android:id="@+id/button"
+        android:id="@+id/btnSync"
         android:layout_gravity="center" />
 </FrameLayout>
