--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="purple">#DC00FF</color>
     <color name="custom_yellow">#E9D460</color>
     <color name="white_pure">#FFFFFF</color>
+    <color name="dark_green">#2E7D32</color>
 </resources>
