--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -13,11 +13,12 @@
 
     <ImageView
         android:id="@+id/ic_profile"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
         android:maxHeight="5dp"
         android:maxWidth="5dp"
-        android:paddingTop="5dp"
+        android:paddingTop="2dp"
         android:src="@mipmap/ic_nav" />
 
     <TextView
