--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -6,29 +6,11 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
-    <!--<item-->
-        <!--android:id="@+id/clear_expanses"-->
-        <!--android:orderInCategory="99"-->
-        <!--android:title="@string/clear_expenses"-->
-        <!--app:showAsAction="ifRoom" />-->
-    <!--<item-->
-        <!--android:id="@+id/clear_income"-->
-        <!--android:orderInCategory="98"-->
-        <!--android:title="@string/clear_income"-->
-        <!--app:showAsAction="collapseActionView" />-->
-
     <item
         android:id="@+id/action_wow"
         android:orderInCategory="90"
         android:title="WOW"
-        android:checkable="true"
-        android:icon="@mipmap/ic_launcher"
-        app:showAsAction="never" />
-
-    <!--<item-->
-        <!--android:id="@+id/setelan"-->
-        <!--android:icon="@drawable/ic_menu_manage"-->
-        <!--android:orderInCategory="100"-->
-        <!--android:title="@string/action_settings"-->
-        <!--app:showAsAction="always" />-->
+        android:checkable="false"
+        android:icon="@mipmap/ic_nav"
+        app:showAsAction="always" />
 </menu>
