--- a/app/src/main/res/menu/activity_custom_drawer.xml
+++ b/app/src/main/res/menu/activity_custom_drawer.xml
@@ -13,6 +13,15 @@
             android:id="@+id/sync"
             android:icon="@android:drawable/ic_popup_sync"
             android:title="Synchronize" />
+        <item
+            android:id="@+id/fab"
+            android:icon="@mipmap/ic_nav"
+            android:title="Floating" />
+        <item
+            android:id="@+id/chart"
+            android:icon="@drawable/ic_menu_gallery"
+            android:title="Chart" />
+
 <!--<item-->
             <!--android:id="@+id/nav_manage"-->
             <!--android:icon="@drawable/ic_menu_manage"-->
