--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -2,7 +2,7 @@
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="x7a.droid.advancedapp.DashboardPage"
+    tools:context=".fragment.DashboardPage"
     android:background="#95A5A6">
 
 
