--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/fragment_place"
-        android:name="x7a.droid.advancedapp.WelcomePage">
+        android:name="x7a.droid.advancedapp.fragment.WelcomePage">
     </fragment>
 
 </FrameLayout>
