--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -23,13 +23,13 @@
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/fragment_main" />
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end|center|bottom"
-        android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/ic_popup_disk_full" />
+    <!--<android.support.design.widget.FloatingActionButton-->
+        <!--android:id="@+id/fab"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_gravity="end|center|bottom"-->
+        <!--android:layout_margin="@dimen/fab_margin"-->
+        <!--android:src="@android:drawable/ic_popup_disk_full" />-->
 
 
 </android.support.design.widget.CoordinatorLayout>
