--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/side_nav_bar"
     android:gravity="bottom"
     android:orientation="vertical"
@@ -9,29 +10,42 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark">
+    android:theme="@style/ThemeOverlay.AppCompat.Dark"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".MainActivity"
+    android:id="@+id/nav_drawer">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/token_id"
+        android:text="@string/token_id"
+        android:textStyle="bold"
+        android:textColor="@color/black"
+        android:layout_gravity="right"/>
 
     <ImageView
         android:id="@+id/ic_profile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
         android:maxHeight="5dp"
         android:maxWidth="5dp"
         android:paddingTop="2dp"
         android:src="@mipmap/ic_nav" />
 
     <TextView
+        android:id="@+id/nav_user"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
+        android:paddingTop="@dimen/nav_header_vertical_spacing_custom"
         android:text="@string/nav_name"
+        android:textStyle="bold"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
-
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/nav_address"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/nav_email" />
+        android:textStyle="italic"
+        android:text="@string/nav_status" />
 
 </LinearLayout>
